[tool.poetry]
name = "ghost-cli"
version = "0.1.0"
description = ""
authors = ["Milnomada <info@milnomada.io>"]
readme = "README.md"
packages = [{include = "ghost_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
pyjwt = "^2.6.0"
requests = "^2.28.1"
python-slugify = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
