[tool.poetry]
name = "ghost-cli"
version = "0.3.0"
description = ""
authors = ["Milnomada <info@milnomada.io>"]
readme = "README.md"
packages = [{include = "ghost_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
pyjwt = "^2.6.0"
requests = "^2.28.1"
python-slugify = "^7.0.0"
pytest-cov = "^4.0.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
coverage-badge = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
nded Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',  
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
    ],
)
