[tool.poetry]
name = "ghost-cli"
version = "0.3.1"
description = ""
authors = ["Milnomada <info@milnomada.io>"]
readme = "README.md"
packages = [{include = "ghost_cli"}]

[tool.poetry.dependencies]
python = "^3.6.8"
pyjwt = "2.4.0"
requests = "2.22.0"
python-slugify = "6.0.0"
pytest-cov = "^4.0.0"
pytest = "7.0.1"
pytest-mock = "3.6.1"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
